plugins {
  id 'org.springframework.boot' version '3.2.0'
  id 'io.spring.dependency-management' version '1.1.4'
  id 'java'
}

group = 'com.softarc'
version = '0.0.1-SNAPSHOT'

java {
  sourceCompatibility = '21'
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter'
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'org.apache.commons:commons-lang3'
  implementation 'org.mapstruct:mapstruct:1.5.5.Final'

  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-webflux'

  compileOnly 'org.projectlombok:lombok'
  annotationProcessor 'org.projectlombok:lombok'
  annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
  annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
  annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
  developmentOnly 'org.springframework.boot:spring-boot-devtools'
}

tasks.withType(JavaCompile).each {
  it.options.compilerArgs.add('--enable-preview')
}

tasks.named('test') {
    useJUnitPlatform()
}

test {
  jvmArgs(['--enable-preview'])
}
